--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js"
+    "brain-calc": "bin/brain-calc.js",
+    "brain-nod": "bin/brain-nod.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
