--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
-    "brain-nod": "bin/brain-nod.js"
+    "brain-nod": "bin/brain-nod.js",
+    "brain-progression": "bin/brain-progression.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
