--- a/.eskintrc.yml
+++ b/.eskintrc.yml
@@ -1,23 +1,15 @@
 ---
 
-plugins:
-  - jest
-
-# https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
   node: true
 
+parser: babel-eslint
+
 extends:
   - 'airbnb-base'
-  - 'plugin:jest/recommended'
 
 parserOptions:
   ecmaVersion: latest
 
 rules:
   no-console: 0
-  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
-    - error
-    - ignorePackages
-    - js: always
-  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
