--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is Hexlet project - Brain Games",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
-  "author": "",
+  "author": "Artem Rudov",
   "license": "ISC",
   "bin": {
     "brain-games": "bin/brain-games.js",
